update path of deleteCategory
